--- a/index.html
+++ b/index.html
@@ -7,17 +7,38 @@
 <script src="jspdf.umd.min.js"></script>
 
 <style>
-body{margin:0;font-family:Arial;background:url("https://images.unsplash.com/photo-1503951914875-452162b0f3f1");background-size:cover;background-position:center}
-.overlay{background:rgba(0,0,0,.75);min-height:100vh}
-.menu{position:fixed;left:0;top:0;bottom:0;width:70px;background:rgba(0,0,0,.4);display:flex;flex-direction:column;align-items:center;padding-top:20px}
-.menu button{background:none;border:none;color:#f1c40f;font-size:22px;margin:15px 0;cursor:pointer}
+body{
+  margin:0;
+  font-family:Arial,Helvetica,sans-serif;
+  background:url("https://images.unsplash.com/photo-1503951914875-452162b0f3f1");
+  background-size:cover;
+  background-position:center;
+}
+.overlay{background:rgba(0,0,0,.72);min-height:100vh}
+.menu{
+  position:fixed;left:0;top:0;bottom:0;width:70px;
+  background:rgba(0,0,0,.45);
+  display:flex;flex-direction:column;align-items:center;padding-top:20px
+}
+.menu button{
+  background:none;border:none;color:#f1c40f;
+  font-size:22px;margin:15px 0;cursor:pointer
+}
 .content{margin-left:90px;padding:20px;color:#fff}
-.section{display:none}.section.active{display:block}
-input,select,button{padding:8px;border-radius:6px;border:none;margin:4px 0}
+.section{display:none}
+.section.active{display:block}
+input,select,button{
+  padding:8px;border-radius:6px;border:none;margin:4px 0
+}
 button{cursor:pointer;font-weight:bold}
+table{width:100%;border-collapse:collapse}
+th,td{border-bottom:1px solid rgba(255,255,255,.2);padding:6px}
 .total{font-size:20px;color:#2ecc71}
-.caixaAberto{color:#2ecc71;font-size:20px;font-weight:bold}
+.ok{color:#2ecc71}
+.warn{color:#f1c40f}
+.neg{color:#e74c3c}
 .hidden{display:none}
+canvas{background:#111;border-radius:8px;margin-top:10px}
 </style>
 </head>
 
@@ -26,15 +47,18 @@ button{cursor:pointer;font-weight:bold}
 
 <div class="menu">
   <button onclick="show('pdv')">💈</button>
+  <button onclick="show('agenda')">🕒</button>
   <button onclick="show('clientes')">👤</button>
+  <button onclick="show('planos')">💳</button>
   <button onclick="show('produtos')">📦</button>
   <button onclick="show('despesas')">🧾</button>
+  <button onclick="show('mensal')">📆</button>
   <button onclick="show('historico')">📚</button>
 </div>
 
 <div class="content">
 
-<!-- PDV -->
+<!-- ================= PDV ================= -->
 <div id="pdv" class="section active">
   <h2>PDV / Caixa</h2>
 
@@ -45,22 +69,50 @@ button{cursor:pointer;font-weight:bold}
     <button onclick="abrirCaixa()">Abrir Caixa</button>
   </div>
 
+  <h4>Período do Caixa</h4>
+  <input type="date" id="periodoInicio">
+  <input type="date" id="periodoFim">
+
+  <hr>
+
+  <select id="cliente"></select>
+  <select id="produto"></select>
   <select id="pagamento">
     <option value="dinheiro">Dinheiro</option>
     <option value="pix">Pix</option>
     <option value="cartao">Cartão</option>
   </select>
 
-  <input id="itemNome" placeholder="Item">
-  <input id="itemValor" type="number" placeholder="Valor">
-  <button onclick="finalizarVenda()">Registrar Venda</button>
+  <button onclick="addItem()">Adicionar</button>
 
-  <p class="total">Total do dia: R$ <span id="totalDia">0.00</span></p>
+  <table id="carrinho"></table>
+  <p class="total">Total: R$ <span id="total">0.00</span></p>
 
+  <button onclick="finalizarVenda()">Finalizar Venda</button>
   <button onclick="fecharCaixa()">Fechar Caixa</button>
+  <button onclick="pdfFechamento()">📄 PDF Caixa</button>
+
+  <div id="resumoCaixa"></div>
+
+  <h4>Conferência de Dinheiro</h4>
+  <input id="dinheiroContado" type="number" placeholder="Dinheiro contado">
+  <p id="resultadoConferencia"></p>
+
+  <canvas id="graficoCaixa" width="380" height="200"></canvas>
 </div>
 
-<!-- CLIENTES -->
+<!-- ================= AGENDA ================= -->
+<div id="agenda" class="section">
+  <h2>Agenda (15 em 15)</h2>
+  <input type="date" id="dataAgenda">
+  <select id="horaAgenda"></select>
+  <select id="clienteAgenda"></select>
+  <select id="servicoAgenda"></select>
+  <button onclick="salvarAgendamento()">Agendar</button>
+  <ul id="listaAgenda"></ul>
+</div>
+
+<!-- ================= CLIENTES ================= -->
 <div id="clientes" class="section">
   <h2>Clientes</h2>
   <input id="nomeCliente" placeholder="Nome">
@@ -68,27 +120,56 @@ button{cursor:pointer;font-weight:bold}
   <ul id="listaClientes"></ul>
 </div>
 
-<!-- PRODUTOS -->
+<!-- ================= PLANOS ================= -->
+<div id="planos" class="section">
+  <h2>Planos</h2>
+  <input id="nomePlano" placeholder="Nome">
+  <input id="valorPlano" type="number" placeholder="Valor">
+  <input id="qtdPlano" type="number" placeholder="Qtd serviços">
+  <select id="tipoPlano"></select>
+  <button onclick="salvarPlano()">Salvar</button>
+  <ul id="listaPlanos"></ul>
+</div>
+
+<!-- ================= PRODUTOS ================= -->
 <div id="produtos" class="section">
-  <h2>Produtos</h2>
+  <h2>Produtos / Serviços</h2>
   <input id="nomeProd" placeholder="Nome">
   <input id="valorProd" type="number" placeholder="Valor">
+  <select id="tipoProd">
+    <option value="produto">Produto</option>
+    <option value="servico">Serviço</option>
+  </select>
   <button onclick="salvarProduto()">Salvar</button>
   <ul id="listaProdutos"></ul>
 </div>
 
-<!-- DESPESAS -->
+<!-- ================= DESPESAS ================= -->
 <div id="despesas" class="section">
   <h2>Despesas</h2>
   <input id="descDespesa" placeholder="Descrição">
   <input id="valorDespesa" type="number" placeholder="Valor">
+  <select id="tipoDespesa">
+    <option value="variavel">Variável</option>
+    <option value="fixa">Fixa mensal</option>
+  </select>
   <button onclick="salvarDespesa()">Salvar</button>
   <ul id="listaDespesas"></ul>
 </div>
 
-<!-- HISTÓRICO -->
+<!-- ================= RELATÓRIO MENSAL ================= -->
+<div id="mensal" class="section">
+  <h2>Relatório Mensal</h2>
+  <input type="month" id="mesRelatorio">
+  <button onclick="gerarRelatorioMensal()">Gerar</button>
+  <button onclick="pdfRelatorioMensal()">📄 PDF Mensal</button>
+  <div id="resumoMensal"></div>
+  <canvas id="graficoMensal" width="380" height="200"></canvas>
+</div>
+
+<!-- ================= HISTÓRICO ================= -->
 <div id="historico" class="section">
-  <h2>Histórico de Caixa</h2>
+  <h2>Histórico de Fechamentos</h2>
   <ul id="listaHistorico"></ul>
 </div>
 
@@ -96,75 +177,184 @@ button{cursor:pointer;font-weight:bold}
 </div>
 
 <script>
+/* =====================================================
+   BASE / DB (BLINDADO)
+===================================================== */
 function show(id){
   document.querySelectorAll(".section").forEach(s=>s.classList.remove("active"));
   document.getElementById(id).classList.add("active");
 }
 
-const db = JSON.parse(localStorage.getItem("db")) || {
-  clientes:[], produtos:[], despesas:[], vendas:[],
-  historico:[], caixa:{aberto:false,abertura:0}
+const raw = JSON.parse(localStorage.getItem("db")||"{}");
+const db = {
+  clientes: raw.clientes || [],
+  planos: raw.planos || [],
+  produtos: raw.produtos || [],
+  vendas: raw.vendas || [],
+  despesas: raw.despesas || [],
+  agenda: raw.agenda || [],
+  historico: raw.historico || [],
+  caixa: raw.caixa || {aberto:false,abertura:0}
 };
 
+let carrinho=[];
 function save(){localStorage.setItem("db",JSON.stringify(db))}
 
+/* =====================================================
+   AGENDA
+===================================================== */
+function gerarHorarios15(){
+  let h=[];
+  for(let i=8;i<=20;i++){
+    ["00","15","30","45"].forEach(m=>h.push(`${String(i).padStart(2,"0")}:${m}`));
+  }
+  return h;
+}
+
+function salvarAgendamento(){
+  if(db.agenda.find(a=>a.data===dataAgenda.value && a.hora===horaAgenda.value))
+    return alert("Horário ocupado");
+  db.agenda.push({
+    data:dataAgenda.value,
+    hora:horaAgenda.value,
+    cliente:clienteAgenda.value,
+    servico:servicoAgenda.value
+  });
+  save(); render();
+}
+
+/* =====================================================
+   CAIXA
+===================================================== */
 function abrirCaixa(){
-  db.caixa.aberto = true;
-  db.caixa.abertura = +valorAbertura.value || 0;
-  db.vendas = [];
-  save();
-  render();
+  db.caixa.aberto=true;
+  db.caixa.abertura=+valorAbertura.value||0;
+  carrinho=[];
+  save(); render();
+}
+
+function addItem(){
+  const [nome,valor]=produto.value.split("|");
+  carrinho.push({nome,valor:+valor});
+  renderCarrinho();
 }
 
 function finalizarVenda(){
-  if(!db.caixa.aberto) return alert("Abra o caixa");
-  const v = +itemValor.value || 0;
-  db.vendas.push({valor:v, pagamento:pagamento.value});
-  save();
-  render();
+  if(!carrinho.length) return;
+  const total=carrinho.reduce((s,i)=>s+i.valor,0);
+  db.vendas.push({
+    data:new Date().toLocaleString(),
+    cliente:cliente.value,
+    pagamento:pagamento.value,
+    total
+  });
+  carrinho=[];
+  save(); render();
 }
 
 function fecharCaixa(){
-  const total = db.vendas.reduce((s,v)=>s+v.valor,0);
-  db.historico.push({
-    data:new Date().toLocaleString(),
-    abertura:db.caixa.abertura,
-    total
+  const ini=periodoInicio.value?new Date(periodoInicio.value):null;
+  const fim=periodoFim.value?new Date(periodoFim.value+" 23:59:59"):null;
+
+  let pix=0,cartao=0,dinheiro=0;
+  db.vendas.forEach(v=>{
+    const dt=new Date(v.data);
+    if(ini&&dt<ini)return;
+    if(fim&&dt>fim)return;
+    if(v.pagamento==="pix")pix+=v.total;
+    if(v.pagamento==="cartao")cartao+=v.total;
+    if(v.pagamento==="dinheiro")dinheiro+=v.total;
   });
-  db.caixa.aberto = false;
-  save();
-  render();
+
+  const despesas=db.despesas.filter(d=>{
+    if(d.tipo==="fixa")return false;
+    const dt=new Date(d.data);
+    if(ini&&dt<ini)return false;
+    if(fim&&dt>fim)return false;
+    return true;
+  }).reduce((s,d)=>s+d.valor,0);
+
+  const faturamento=pix+cartao+dinheiro;
+  const saldo=db.caixa.abertura+faturamento-despesas;
+
+  const contado=+dinheiroContado.value||0;
+  const diff=contado-dinheiro;
+
+  resumoCaixa.innerHTML=`
+    <p>Abertura: R$ ${db.caixa.abertura.toFixed(2)}</p>
+    <p>Pix: R$ ${pix.toFixed(2)}</p>
+    <p>Cartão: R$ ${cartao.toFixed(2)}</p>
+    <p>Dinheiro: R$ ${dinheiro.toFixed(2)}</p>
+    <p>Despesas: R$ ${despesas.toFixed(2)}</p>
+    <p class="total">Saldo esperado: R$ ${saldo.toFixed(2)}</p>
+  `;
+
+  if(diff===0) resultadoConferencia.innerHTML="<span class='ok'>✔ Conferido</span>";
+  else if(diff<0) resultadoConferencia.innerHTML=`<span class='neg'>❌ Falta R$ ${Math.abs(diff).toFixed(2)}</span>`;
+  else resultadoConferencia.innerHTML=`<span class='warn'>⚠️ Sobra R$ ${diff.toFixed(2)}</span>`;
+
+  db.historico.push({
+    periodo:`${periodoInicio.value} até ${periodoFim.value}`,
+    faturamento,despesas,saldo
+  });
+
+  db.caixa.aberto=false;
+  save(); render();
 }
 
-function salvarCliente(){
-  db.clientes.push({nome:nomeCliente.value});
-  save(); render();
-}
-function salvarProduto(){
-  db.produtos.push({nome:nomeProd.value,valor:+valorProd.value});
-  save(); render();
-}
-function salvarDespesa(){
-  db.despesas.push({desc:descDespesa.value,valor:+valorDespesa.value});
-  save(); render();
+/* =====================================================
+   CADASTROS
+===================================================== */
+function salvarCliente(){db.clientes.push({nome:nomeCliente.value});save();render();}
+function salvarPlano(){db.planos.push({nome:nomePlano.value,valor:+valorPlano.value,qtd:+qtdPlano.value,tipo:tipoPlano.value});save();render();}
+function salvarProduto(){db.produtos.push({nome:nomeProd.value,valor:+valorProd.value,tipo:tipoProd.value});save();render();}
+function salvarDespesa(){db.despesas.push({desc:descDespesa.value,valor:+valorDespesa.value,tipo:tipoDespesa.value,data:new Date().toLocaleString()});save();render();}
+
+/* =====================================================
+   RELATÓRIO MENSAL
+===================================================== */
+function gerarRelatorioMensal(){
+  const [ano,m]=mesRelatorio.value.split("-");
+  const vendas=db.vendas.filter(v=>{const d=new Date(v.data);return d.getFullYear()==ano&&(d.getMonth()+1)==m});
+  const despesas=db.despesas.filter(d=>d.tipo==="fixa"||new Date(d.data).getMonth()+1==m);
+  const fat=vendas.reduce((s,v)=>s+v.total,0);
+  const desp=despesas.reduce((s,d)=>s+d.valor,0);
+  resumoMensal.innerHTML=`<p>Faturamento: R$ ${fat.toFixed(2)}</p><p>Despesas: R$ ${desp.toFixed(2)}</p><p class="total">Lucro: R$ ${(fat-desp).toFixed(2)}</p>`;
 }
 
+function pdfFechamento(){const{jsPDF}=window.jspdf;const p=new jsPDF();p.text("Fechamento de Caixa",10,10);p.text(resumoCaixa.innerText,10,20);p.save("caixa.pdf");}
+function pdfRelatorioMensal(){const{jsPDF}=window.jspdf;const p=new jsPDF();p.text("Relatório Mensal",10,10);p.text(resumoMensal.innerText,10,20);p.save("mensal.pdf");}
+
+/* =====================================================
+   RENDER
+===================================================== */
 function render(){
-  statusCaixa.innerHTML = db.caixa.aberto
-    ? '<span class="caixaAberto">🟢 CAIXA ABERTO</span>'
-    : '<span>🔴 CAIXA FECHADO</span>';
+  statusCaixa.innerHTML=db.caixa.aberto?"<span class='ok'>🟢 Caixa aberto</span>":"<span class='warn'>🔴 Caixa fechado</span>";
+  abrirBox.classList.toggle("hidden",db.caixa.aberto);
 
-  abrirBox.classList.toggle("hidden", db.caixa.aberto);
+  cliente.innerHTML=db.clientes.map(c=>`<option>${c.nome}</option>`).join("");
+  clienteAgenda.innerHTML=cliente.innerHTML;
 
-  totalDia.innerText = db.vendas.reduce((s,v)=>s+v.valor,0).toFixed(2);
+  produto.innerHTML=db.produtos.map(p=>`<option value="${p.nome}|${p.valor}">${p.nome}</option>`).join("");
+  servicoAgenda.innerHTML=db.produtos.filter(p=>p.tipo==="servico").map(p=>`<option>${p.nome}</option>`).join("");
 
-  listaClientes.innerHTML = db.clientes.map(c=>`<li>${c.nome}</li>`).join("");
-  listaProdutos.innerHTML = db.produtos.map(p=>`<li>${p.nome} - R$ ${p.valor}</li>`).join("");
-  listaDespesas.innerHTML = db.despesas.map(d=>`<li>${d.desc} - R$ ${d.valor}</li>`).join("");
+  horaAgenda.innerHTML=gerarHorarios15().map(h=>`<option>${h}</option>`).join("");
 
-  listaHistorico.innerHTML = db.historico.map(h=>`
-    <li>${h.data} | Abertura R$ ${h.abertura} | Total R$ ${h.total}</li>
-  `).join("");
+  listaClientes.innerHTML=db.clientes.map(c=>`<li>${c.nome}</li>`).join("");
+  listaPlanos.innerHTML=db.planos.map(p=>`<li>${p.nome} - R$ ${p.valor}</li>`).join("");
+  listaProdutos.innerHTML=db.produtos.map(p=>`<li>${p.nome}</li>`).join("");
+  listaDespesas.innerHTML=db.despesas.map(d=>`<li>${d.desc} - R$ ${d.valor}</li>`).join("");
+  listaAgenda.innerHTML=db.agenda.map(a=>`<li>${a.data} ${a.hora} - ${a.cliente}</li>`).join("");
+  listaHistorico.innerHTML=db.historico.map(h=>`<li>${h.periodo} | Saldo R$ ${Number(h.saldo||0).toFixed(2)}</li>`).join("");
+
+  renderCarrinho();
+}
+
+function renderCarrinho(){
+  let h="<tr><th>Item</th><th>Valor</th></tr>",s=0;
+  carrinho.forEach(i=>{h+=`<tr><td>${i.nome}</td><td>R$ ${i.valor.toFixed(2)}</td></tr>`;s+=i.valor});
+  carrinho.innerHTML=h;
+  total.innerText=s.toFixed(2);
 }
 
 render();
