--- a/index.html
+++ b/index.html
@@ -7,22 +7,18 @@
 <script src="jspdf.umd.min.js"></script>
 
 <style>
-body{margin:0;font-family:Arial,Helvetica,sans-serif;background:url("https://images.unsplash.com/photo-1503951914875-452162b0f3f1");background-size:cover;background-position:center}
+body{margin:0;font-family:Arial;background:url("https://images.unsplash.com/photo-1503951914875-452162b0f3f1");background-size:cover;background-position:center}
 .overlay{background:rgba(0,0,0,.72);min-height:100vh}
 .menu{position:fixed;left:0;top:0;bottom:0;width:70px;background:rgba(0,0,0,.45);display:flex;flex-direction:column;align-items:center;padding-top:20px}
 .menu button{background:none;border:none;color:#f1c40f;font-size:22px;margin:15px 0;cursor:pointer}
 .content{margin-left:90px;padding:20px;color:#fff}
 .section{display:none}.section.active{display:block}
 input,select,button{padding:8px;border-radius:6px;border:none;margin:4px 0}
-input.invalid{outline:2px solid #e74c3c}
 button{cursor:pointer;font-weight:bold}
-table{width:100%;border-collapse:collapse}
-th,td{border-bottom:1px solid rgba(255,255,255,.2);padding:6px}
 .total{font-size:20px;color:#2ecc71}
-.ok{color:#2ecc71}.warn{color:#f1c40f}.neg{color:#e74c3c}
 .hidden{display:none}
 canvas{background:#111;border-radius:8px;margin-top:10px}
-small{color:#ccc}
+ul{padding-left:20px}
 </style>
 </head>
 
@@ -37,12 +33,11 @@ small{color:#ccc}
   <button onclick="show('produtos')">📦</button>
   <button onclick="show('despesas')">🧾</button>
   <button onclick="show('mensal')">📆</button>
-  <button onclick="show('historico')">📚</button>
 </div>
 
 <div class="content">
 
-<!-- ================= PDV ================= -->
+<!-- PDV -->
 <div id="pdv" class="section active">
   <h2>PDV / Caixa</h2>
   <p id="statusCaixa"></p>
@@ -51,12 +46,6 @@ small{color:#ccc}
     <input id="valorAbertura" type="number" placeholder="Valor de abertura">
     <button onclick="abrirCaixa()">Abrir Caixa</button>
   </div>
-
-  <h4>Período do Caixa</h4>
-  <input type="date" id="periodoInicio">
-  <input type="date" id="periodoFim">
-
-  <hr>
 
   <select id="cliente"></select>
   <select id="produto"></select>
@@ -72,19 +61,9 @@ small{color:#ccc}
   <p class="total">Total: R$ <span id="total">0.00</span></p>
 
   <button onclick="finalizarVenda()">Finalizar Venda</button>
-  <button onclick="fecharCaixa()">Fechar Caixa</button>
-  <button onclick="pdfFechamento()">📄 PDF Caixa</button>
-
-  <div id="resumoCaixa"></div>
-
-  <h4>Conferência de Dinheiro</h4>
-  <input id="dinheiroContado" type="number" placeholder="Dinheiro contado">
-  <p id="resultadoConferencia"></p>
-
-  <canvas id="graficoCaixa" width="380" height="200"></canvas>
 </div>
 
-<!-- ================= AGENDA ================= -->
+<!-- AGENDA -->
 <div id="agenda" class="section">
   <h2>Agenda (15 em 15)</h2>
   <input type="date" id="dataAgenda">
@@ -95,15 +74,16 @@ small{color:#ccc}
   <ul id="listaAgenda"></ul>
 </div>
 
-<!-- ================= CLIENTES ================= -->
+<!-- CLIENTES -->
 <div id="clientes" class="section">
   <h2>Clientes</h2>
   <input id="nomeCliente" placeholder="Nome">
+  <select id="planoCliente"></select>
   <button onclick="salvarCliente()">Salvar</button>
   <ul id="listaClientes"></ul>
 </div>
 
-<!-- ================= PLANOS ================= -->
+<!-- PLANOS -->
 <div id="planos" class="section">
   <h2>Planos</h2>
   <input id="nomePlano" placeholder="Nome">
@@ -114,7 +94,7 @@ small{color:#ccc}
   <ul id="listaPlanos"></ul>
 </div>
 
-<!-- ================= PRODUTOS ================= -->
+<!-- PRODUTOS -->
 <div id="produtos" class="section">
   <h2>Produtos / Serviços</h2>
   <input id="nomeProd" placeholder="Nome">
@@ -127,183 +107,202 @@ small{color:#ccc}
   <ul id="listaProdutos"></ul>
 </div>
 
-<!-- ================= DESPESAS ================= -->
+<!-- DESPESAS -->
 <div id="despesas" class="section">
   <h2>Despesas</h2>
   <input id="descDespesa" placeholder="Descrição">
   <input id="valorDespesa" type="number" placeholder="Valor">
-  <select id="tipoDespesa">
-    <option value="variavel">Variável</option>
-    <option value="fixa">Fixa mensal</option>
-  </select>
   <button onclick="salvarDespesa()">Salvar</button>
   <ul id="listaDespesas"></ul>
 </div>
 
-<!-- ================= RELATÓRIO MENSAL ================= -->
+<!-- RELATÓRIO -->
 <div id="mensal" class="section">
   <h2>Relatório Mensal</h2>
   <input type="month" id="mesRelatorio">
   <button onclick="gerarRelatorioMensal()">Gerar</button>
-  <button onclick="pdfRelatorioMensal()">📄 PDF Mensal</button>
   <div id="resumoMensal"></div>
-  <canvas id="graficoMensal" width="380" height="200"></canvas>
-</div>
-
-<!-- ================= HISTÓRICO ================= -->
-<div id="historico" class="section">
-  <h2>Histórico de Fechamentos</h2>
-  <ul id="listaHistorico"></ul>
 </div>
 
 </div>
 </div>
 
 <script>
-/* ================= UTIL ================= */
-function show(id){document.querySelectorAll(".section").forEach(s=>s.classList.remove("active"));document.getElementById(id).classList.add("active")}
-function num(v){return Number(v)||0}
-function inval(el,cond){el.classList.toggle("invalid",cond)}
+/* ===== BASE ===== */
+function show(id){
+  document.querySelectorAll(".section").forEach(s=>s.classList.remove("active"));
+  document.getElementById(id).classList.add("active");
+}
 
-/* ================= DB ================= */
-const raw=JSON.parse(localStorage.getItem("db")||"{}");
-const db={
-  clientes:raw.clientes||[],
-  planos:raw.planos||[],
-  produtos:raw.produtos||[],
-  vendas:raw.vendas||[],
-  despesas:raw.despesas||[],
-  agenda:raw.agenda||[],
-  historico:raw.historico||[],
-  caixa:raw.caixa||{aberto:false,abertura:0}
+const db = JSON.parse(localStorage.getItem("db")) || {
+  clientes:[], planos:[], produtos:[],
+  vendas:[], despesas:[], agenda:[],
+  caixa:{aberto:false,abertura:0}
 };
+
 let carrinho=[];
 function save(){localStorage.setItem("db",JSON.stringify(db))}
 
-/* ================= AGENDA ================= */
-function gerarHorarios15(){let h=[];for(let i=8;i<=20;i++)["00","15","30","45"].forEach(m=>h.push(`${String(i).padStart(2,"0")}:${m}`));return h}
+/* ===== AGENDA ===== */
+function gerarHorarios15(){
+  let h=[];
+  for(let i=8;i<=20;i++){
+    ["00","15","30","45"].forEach(m=>h.push(`${String(i).padStart(2,"0")}:${m}`));
+  }
+  return h;
+}
+
 function salvarAgendamento(){
-  if(!dataAgenda.value||!horaAgenda.value){alert("Informe data e hora");return}
-  if(db.agenda.find(a=>a.data===dataAgenda.value&&a.hora===horaAgenda.value))return alert("Horário ocupado");
-  db.agenda.push({data:dataAgenda.value,hora:horaAgenda.value,cliente:clienteAgenda.value||"—",servico:servicoAgenda.value||"—"});
-  save();render();
-}
+  if(db.agenda.find(a=>a.data===dataAgenda.value && a.hora===horaAgenda.value))
+    return alert("Horário ocupado");
 
-/* ================= CAIXA ================= */
-function abrirCaixa(){
-  const v=num(valorAbertura.value);
-  inval(valorAbertura,v<=0);
-  if(v<=0)return alert("Informe valor de abertura");
-  db.caixa.aberto=true;db.caixa.abertura=v;carrinho=[];save();render();
-}
-function addItem(){
-  const p=produto.value.split("|"); const nome=p[0]||"—"; const valor=num(p[1]);
-  carrinho.push({nome,valor}); renderCarrinho();
-}
-function finalizarVenda(){
-  if(!carrinho.length)return alert("Carrinho vazio");
-  const total=carrinho.reduce((s,i)=>s+num(i.valor),0);
-  db.vendas.push({data:new Date().toLocaleString(),cliente:cliente.value||"—",pagamento:pagamento.value,total});
-  carrinho=[];save();render();
-}
-function fecharCaixa(){
-  const ini=periodoInicio.value?new Date(periodoInicio.value):null;
-  const fim=periodoFim.value?new Date(periodoFim.value+" 23:59:59"):null;
-  let pix=0,cartao=0,dinheiro=0;
-  db.vendas.forEach(v=>{
-    const dt=new Date(v.data); if(ini&&dt<ini)return; if(fim&&dt>fim)return;
-    if(v.pagamento==="pix")pix+=num(v.total);
-    if(v.pagamento==="cartao")cartao+=num(v.total);
-    if(v.pagamento==="dinheiro")dinheiro+=num(v.total);
+  db.agenda.push({
+    data:dataAgenda.value,
+    hora:horaAgenda.value,
+    cliente:clienteAgenda.value,
+    servico:servicoAgenda.value
   });
-  const despesas=db.despesas.filter(d=>{
-    if(d.tipo==="fixa")return false;
-    const dt=new Date(d.data); if(ini&&dt<ini)return false; if(fim&&dt>fim)return false; return true;
-  }).reduce((s,d)=>s+num(d.valor),0);
-  const faturamento=pix+cartao+dinheiro;
-  const saldo=db.caixa.abertura+faturamento-despesas;
-  const contado=num(dinheiroContado.value); const diff=contado-dinheiro;
-  resumoCaixa.innerHTML=`<p>Abertura: R$ ${db.caixa.abertura.toFixed(2)}</p>
-    <p>Pix: R$ ${pix.toFixed(2)}</p><p>Cartão: R$ ${cartao.toFixed(2)}</p>
-    <p>Dinheiro: R$ ${dinheiro.toFixed(2)}</p><p>Despesas: R$ ${despesas.toFixed(2)}</p>
-    <p class="total">Saldo esperado: R$ ${saldo.toFixed(2)}</p>`;
-  resultadoConferencia.innerHTML=diff===0?`<span class="ok">✔ Conferido</span>`:diff<0?`<span class="neg">❌ Falta R$ ${Math.abs(diff).toFixed(2)}</span>`:`<span class="warn">⚠️ Sobra R$ ${diff.toFixed(2)}</span>`;
-  desenharGraficoCaixa(pix,cartao,dinheiro,despesas,saldo);
-  db.historico.push({periodo:`${periodoInicio.value} até ${periodoFim.value}`,faturamento,despesas,saldo});
-  db.caixa.aberto=false;save();render();
+  save(); render();
 }
 
-/* ================= CADASTROS ================= */
-function salvarCliente(){if(!nomeCliente.value){inval(nomeCliente,true);return alert("Nome obrigatório")}db.clientes.push({nome:nomeCliente.value});save();render()}
+/* ===== CLIENTES ===== */
+function salvarCliente(){
+  const plano = db.planos.find(p=>p.nome===planoCliente.value);
+  db.clientes.push({
+    nome:nomeCliente.value,
+    plano:plano?plano.nome:null,
+    saldo:plano?plano.qtd:0
+  });
+  save(); render();
+}
+
+/* ===== PLANOS ===== */
 function salvarPlano(){
-  const v=num(valorPlano.value),q=num(qtdPlano.value);
-  if(!nomePlano.value||v<=0||q<=0)return alert("Preencha plano corretamente");
-  db.planos.push({nome:nomePlano.value,valor:v,qtd:q,tipo:tipoPlano.value});save();render()
-}
-function salvarProduto(){
-  const v=num(valorProd.value);
-  if(!nomeProd.value||v<=0)return alert("Produto inválido");
-  db.produtos.push({nome:nomeProd.value,valor:v,tipo:tipoProd.value});save();render()
-}
-function salvarDespesa(){
-  const v=num(valorDespesa.value);
-  if(!descDespesa.value||v<=0)return alert("Despesa inválida");
-  db.despesas.push({desc:descDespesa.value,valor:v,tipo:tipoDespesa.value,data:new Date().toLocaleString()});
-  save();render()
+  db.planos.push({
+    nome:nomePlano.value,
+    valor:+valorPlano.value||0,
+    qtd:+qtdPlano.value||0,
+    tipo:tipoPlano.value
+  });
+  save(); render();
 }
 
-/* ================= RELATÓRIO MENSAL ================= */
+/* ===== PRODUTOS ===== */
+function salvarProduto(){
+  db.produtos.push({
+    nome:nomeProd.value,
+    valor:+valorProd.value||0,
+    tipo:tipoProd.value
+  });
+  save(); render();
+}
+
+/* ===== DESPESAS ===== */
+function salvarDespesa(){
+  db.despesas.push({
+    desc:descDespesa.value,
+    valor:+valorDespesa.value||0,
+    data:new Date().toLocaleString()
+  });
+  save(); render();
+}
+
+/* ===== PDV ===== */
+function abrirCaixa(){
+  db.caixa.aberto=true;
+  db.caixa.abertura=+valorAbertura.value||0;
+  carrinho=[];
+  save(); render();
+}
+
+function addItem(){
+  const [nome,valor]=produto.value.split("|");
+  carrinho.push({nome,valor:+valor||0});
+  renderCarrinho();
+}
+
+function finalizarVenda(){
+  const total=carrinho.reduce((s,i)=>s+(+i.valor||0),0);
+  db.vendas.push({
+    data:new Date().toLocaleString(),
+    cliente:cliente.value,
+    pagamento:pagamento.value,
+    total
+  });
+  carrinho=[];
+  save(); render();
+}
+
+/* ===== RELATÓRIO ===== */
 function gerarRelatorioMensal(){
   const [ano,m]=mesRelatorio.value.split("-");
-  const vendas=db.vendas.filter(v=>{const d=new Date(v.data);return d.getFullYear()==ano&&(d.getMonth()+1)==m});
-  const despesas=db.despesas.filter(d=>d.tipo==="fixa"||new Date(d.data).getMonth()+1==m);
-  const fat=vendas.reduce((s,v)=>s+num(v.total),0);
-  const desp=despesas.reduce((s,d)=>s+num(d.valor),0);
-  resumoMensal.innerHTML=`<p>Faturamento: R$ ${fat.toFixed(2)}</p><p>Despesas: R$ ${desp.toFixed(2)}</p><p class="total">Lucro: R$ ${(fat-desp).toFixed(2)}</p>`;
-  desenharGraficoMensal(fat,desp,fat-desp);
+  const vendas=db.vendas.filter(v=>{
+    const d=new Date(v.data);
+    return d.getFullYear()==ano&&(d.getMonth()+1)==m;
+  });
+  const total=vendas.reduce((s,v)=>s+v.total,0);
+  resumoMensal.innerHTML=`<p>Faturamento: R$ ${total.toFixed(2)}</p>`;
 }
 
-/* ================= GRÁFICOS ================= */
-function desenharGraficoCaixa(pix,cartao,dinheiro,desp,saldo){
-  const g=graficoCaixa.getContext("2d");g.clearRect(0,0,380,200);
-  const vals=[pix,cartao,dinheiro,desp,saldo],labs=["Pix","Cartão","Dinheiro","Despesas","Saldo"],cores=["#2ecc71","#3498db","#f1c40f","#e74c3c","#9b59b6"];
-  const max=Math.max(...vals,1); vals.forEach((v,i)=>{const h=(v/max)*120;g.fillStyle=cores[i];g.fillRect(30+i*65,160-h,40,h);g.fillText(labs[i],30+i*65,180)})
-}
-function desenharGraficoMensal(f,d,l){
-  const g=graficoMensal.getContext("2d");g.clearRect(0,0,380,200);
-  const vals=[f,d,l],labs=["Faturamento","Despesas","Lucro"],cores=["#2ecc71","#e74c3c","#3498db"],max=Math.max(...vals,1);
-  vals.forEach((v,i)=>{const h=(v/max)*120;g.fillStyle=cores[i];g.fillRect(60+i*100,160-h,50,h);g.fillText(labs[i],60+i*100,180)})
-}
-
-/* ================= PDF ================= */
-function pdfFechamento(){const{jsPDF}=window.jspdf;const p=new jsPDF();p.text("Fechamento de Caixa",10,10);p.text(resumoCaixa.innerText,10,20);p.save("caixa.pdf")}
-function pdfRelatorioMensal(){const{jsPDF}=window.jspdf;const p=new jsPDF();p.text("Relatório Mensal",10,10);p.text(resumoMensal.innerText,10,20);p.save("mensal.pdf")}
-
-/* ================= RENDER ================= */
+/* ===== RENDER ===== */
 function render(){
-  statusCaixa.innerHTML=db.caixa.aberto?`<span class="ok">🟢 Caixa aberto</span>`:`<span class="warn">🔴 Caixa fechado</span>`;
+  statusCaixa.innerText=db.caixa.aberto?"🟢 Caixa aberto":"🔴 Caixa fechado";
   abrirBox.classList.toggle("hidden",db.caixa.aberto);
 
   cliente.innerHTML=db.clientes.map(c=>`<option>${c.nome}</option>`).join("");
   clienteAgenda.innerHTML=cliente.innerHTML;
-  produto.innerHTML=db.produtos.map(p=>`<option value="${p.nome}|${p.valor}">${p.nome}</option>`).join("");
-  servicoAgenda.innerHTML=db.produtos.filter(p=>p.tipo==="servico").map(p=>`<option>${p.nome}</option>`).join("");
+
+  planoCliente.innerHTML=
+    `<option value="">Sem plano</option>`+
+    db.planos.map(p=>`<option>${p.nome}</option>`).join("");
+
+  tipoPlano.innerHTML=
+    db.produtos.filter(p=>p.tipo==="servico")
+      .map(p=>`<option>${p.nome}</option>`).join("");
+
+  produto.innerHTML=db.produtos.map(p=>
+    `<option value="${p.nome}|${p.valor}">${p.nome}</option>`
+  ).join("");
+
+  servicoAgenda.innerHTML=
+    db.produtos.filter(p=>p.tipo==="servico")
+      .map(p=>`<option>${p.nome}</option>`).join("");
+
   horaAgenda.innerHTML=gerarHorarios15().map(h=>`<option>${h}</option>`).join("");
 
-  listaClientes.innerHTML=db.clientes.map(c=>`<li>${c.nome}</li>`).join("");
-  listaPlanos.innerHTML=db.planos.map(p=>`<li>${p.nome} - R$ ${p.valor.toFixed(2)}</li>`).join("");
-  listaProdutos.innerHTML=db.produtos.map(p=>`<li>${p.nome} - R$ ${p.valor.toFixed(2)}</li>`).join("");
-  listaDespesas.innerHTML=db.despesas.map(d=>`<li>${d.desc} - R$ ${d.valor.toFixed(2)} (${d.tipo})</li>`).join("");
-  listaAgenda.innerHTML=db.agenda.map(a=>`<li>${a.data} ${a.hora} - ${a.cliente}</li>`).join("");
-  listaHistorico.innerHTML=db.historico.map(h=>`<li>${h.periodo} | Saldo R$ ${num(h.saldo).toFixed(2)}</li>`).join("");
+  listaClientes.innerHTML=db.clientes.map(c=>
+    `<li>${c.nome} | Plano: ${c.plano||"-"} | Saldo: ${c.saldo||0}</li>`
+  ).join("");
+
+  listaPlanos.innerHTML=db.planos.map(p=>
+    `<li>${p.nome} - R$ ${p.valor} (${p.qtd}x ${p.tipo})</li>`
+  ).join("");
+
+  listaProdutos.innerHTML=db.produtos.map(p=>
+    `<li>${p.nome} (${p.tipo})</li>`
+  ).join("");
+
+  listaDespesas.innerHTML=db.despesas.map(d=>
+    `<li>${d.desc} - R$ ${d.valor}</li>`
+  ).join("");
+
+  listaAgenda.innerHTML=db.agenda
+    .filter(a=>a.data===dataAgenda.value)
+    .map(a=>`<li>${a.hora} | ${a.cliente} | ${a.servico}</li>`).join("");
 
   renderCarrinho();
 }
+
 function renderCarrinho(){
   let h="<tr><th>Item</th><th>Valor</th></tr>",s=0;
-  carrinho.forEach(i=>{h+=`<tr><td>${i.nome}</td><td>R$ ${num(i.valor).toFixed(2)}</td></tr>`;s+=num(i.valor)});
-  carrinho.innerHTML=h; total.innerText=s.toFixed(2);
+  carrinho.forEach(i=>{
+    h+=`<tr><td>${i.nome}</td><td>R$ ${i.valor.toFixed(2)}</td></tr>`;
+    s+=i.valor;
+  });
+  carrinho.innerHTML=h;
+  total.innerText=s.toFixed(2);
 }
+
 render();
 </script>
 
