--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
 <meta charset="UTF-8">
 <title>PDV Barbearia</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<script src="jspdf.umd.min.js"></script>
 
 <style>
 body{margin:0;font-family:Arial;background:url("https://images.unsplash.com/photo-1503951914875-452162b0f3f1");background-size:cover;background-position:center}
@@ -17,8 +16,8 @@ input,select,button{padding:8px;border-radius:6px;border:none;margin:4px 0}
 button{cursor:pointer;font-weight:bold}
 .total{font-size:20px;color:#2ecc71}
 .hidden{display:none}
-canvas{background:#111;border-radius:8px;margin-top:10px}
-ul{padding-left:20px}
+table{width:100%;margin-top:10px}
+th,td{padding:6px;text-align:left}
 </style>
 </head>
 
@@ -37,7 +36,6 @@ ul{padding-left:20px}
 
 <div class="content">
 
-<!-- PDV -->
 <div id="pdv" class="section active">
   <h2>PDV / Caixa</h2>
   <p id="statusCaixa"></p>
@@ -49,23 +47,30 @@ ul{padding-left:20px}
 
   <select id="cliente"></select>
   <select id="produto"></select>
+
   <select id="pagamento">
     <option value="dinheiro">Dinheiro</option>
     <option value="pix">Pix</option>
     <option value="cartao">Cartão</option>
   </select>
 
+  <input id="valorPago" type="number" placeholder="Valor pago (dinheiro)">
+  <p id="trocoInfo"></p>
+
   <button onclick="addItem()">Adicionar</button>
 
   <table id="carrinho"></table>
+
   <p class="total">Total: R$ <span id="total">0.00</span></p>
 
   <button onclick="finalizarVenda()">Finalizar Venda</button>
+  <button onclick="fecharCaixa()" style="background:#e74c3c;color:#fff">Fechar Caixa</button>
+
+  <div id="resumoCaixa"></div>
 </div>
 
-<!-- AGENDA -->
 <div id="agenda" class="section">
-  <h2>Agenda (15 em 15)</h2>
+  <h2>Agenda</h2>
   <input type="date" id="dataAgenda">
   <select id="horaAgenda"></select>
   <select id="clienteAgenda"></select>
@@ -74,7 +79,6 @@ ul{padding-left:20px}
   <ul id="listaAgenda"></ul>
 </div>
 
-<!-- CLIENTES -->
 <div id="clientes" class="section">
   <h2>Clientes</h2>
   <input id="nomeCliente" placeholder="Nome">
@@ -83,7 +87,6 @@ ul{padding-left:20px}
   <ul id="listaClientes"></ul>
 </div>
 
-<!-- PLANOS -->
 <div id="planos" class="section">
   <h2>Planos</h2>
   <input id="nomePlano" placeholder="Nome">
@@ -94,7 +97,6 @@ ul{padding-left:20px}
   <ul id="listaPlanos"></ul>
 </div>
 
-<!-- PRODUTOS -->
 <div id="produtos" class="section">
   <h2>Produtos / Serviços</h2>
   <input id="nomeProd" placeholder="Nome">
@@ -107,7 +109,6 @@ ul{padding-left:20px}
   <ul id="listaProdutos"></ul>
 </div>
 
-<!-- DESPESAS -->
 <div id="despesas" class="section">
   <h2>Despesas</h2>
   <input id="descDespesa" placeholder="Descrição">
@@ -116,7 +117,6 @@ ul{padding-left:20px}
   <ul id="listaDespesas"></ul>
 </div>
 
-<!-- RELATÓRIO -->
 <div id="mensal" class="section">
   <h2>Relatório Mensal</h2>
   <input type="month" id="mesRelatorio">
@@ -128,7 +128,6 @@ ul{padding-left:20px}
 </div>
 
 <script>
-/* ===== BASE ===== */
 function show(id){
   document.querySelectorAll(".section").forEach(s=>s.classList.remove("active"));
   document.getElementById(id).classList.add("active");
@@ -137,160 +136,50 @@ function show(id){
 const db = JSON.parse(localStorage.getItem("db")) || {
   clientes:[], planos:[], produtos:[],
   vendas:[], despesas:[], agenda:[],
-  caixa:{aberto:false,abertura:0}
+  caixa:{aberto:false,abertura:0,dinheiro:0,pix:0,cartao:0}
 };
 
 let carrinho=[];
 function save(){localStorage.setItem("db",JSON.stringify(db))}
 
-/* ===== AGENDA ===== */
-function gerarHorarios15(){
-  let h=[];
-  for(let i=8;i<=20;i++){
-    ["00","15","30","45"].forEach(m=>h.push(`${String(i).padStart(2,"0")}:${m}`));
-  }
-  return h;
-}
-
-function salvarAgendamento(){
-  if(db.agenda.find(a=>a.data===dataAgenda.value && a.hora===horaAgenda.value))
-    return alert("Horário ocupado");
-
-  db.agenda.push({
-    data:dataAgenda.value,
-    hora:horaAgenda.value,
-    cliente:clienteAgenda.value,
-    servico:servicoAgenda.value
-  });
-  save(); render();
-}
-
-/* ===== CLIENTES ===== */
-function salvarCliente(){
-  const plano = db.planos.find(p=>p.nome===planoCliente.value);
-  db.clientes.push({
-    nome:nomeCliente.value,
-    plano:plano?plano.nome:null,
-    saldo:plano?plano.qtd:0
-  });
-  save(); render();
-}
-
-/* ===== PLANOS ===== */
-function salvarPlano(){
-  db.planos.push({
-    nome:nomePlano.value,
-    valor:+valorPlano.value||0,
-    qtd:+qtdPlano.value||0,
-    tipo:tipoPlano.value
-  });
-  save(); render();
-}
-
-/* ===== PRODUTOS ===== */
-function salvarProduto(){
-  db.produtos.push({
-    nome:nomeProd.value,
-    valor:+valorProd.value||0,
-    tipo:tipoProd.value
-  });
-  save(); render();
-}
-
-/* ===== DESPESAS ===== */
-function salvarDespesa(){
-  db.despesas.push({
-    desc:descDespesa.value,
-    valor:+valorDespesa.value||0,
-    data:new Date().toLocaleString()
-  });
-  save(); render();
-}
-
-/* ===== PDV ===== */
 function abrirCaixa(){
   db.caixa.aberto=true;
   db.caixa.abertura=+valorAbertura.value||0;
-  carrinho=[];
   save(); render();
 }
 
 function addItem(){
+  if(!produto.value) return;
   const [nome,valor]=produto.value.split("|");
   carrinho.push({nome,valor:+valor||0});
   renderCarrinho();
 }
 
 function finalizarVenda(){
-  const total=carrinho.reduce((s,i)=>s+(+i.valor||0),0);
-  db.vendas.push({
-    data:new Date().toLocaleString(),
-    cliente:cliente.value,
-    pagamento:pagamento.value,
-    total
-  });
-  carrinho=[];
+  if(!db.caixa.aberto) return alert("Caixa fechado");
+  if(carrinho.length===0) return alert("Carrinho vazio");
+
+  const total=carrinho.reduce((s,i)=>s+i.valor,0);
+  const pago=+valorPago.value||0;
+
+  if(pagamento.value==="dinheiro"){
+    if(pago<total) return alert("Valor insuficiente");
+    db.caixa.dinheiro+=total;
+    trocoInfo.innerText=`Troco: R$ ${(pago-total).toFixed(2)}`;
+  }
+  if(pagamento.value==="pix") db.caixa.pix+=total;
+  if(pagamento.value==="cartao") db.caixa.cartao+=total;
+
+  db.vendas.push({data:new Date().toLocaleString(),total});
+  carrinho=[]; valorPago.value="";
   save(); render();
 }
 
-/* ===== RELATÓRIO ===== */
-function gerarRelatorioMensal(){
-  const [ano,m]=mesRelatorio.value.split("-");
-  const vendas=db.vendas.filter(v=>{
-    const d=new Date(v.data);
-    return d.getFullYear()==ano&&(d.getMonth()+1)==m;
-  });
-  const total=vendas.reduce((s,v)=>s+v.total,0);
-  resumoMensal.innerHTML=`<p>Faturamento: R$ ${total.toFixed(2)}</p>`;
-}
-
-/* ===== RENDER ===== */
-function render(){
-  statusCaixa.innerText=db.caixa.aberto?"🟢 Caixa aberto":"🔴 Caixa fechado";
-  abrirBox.classList.toggle("hidden",db.caixa.aberto);
-
-  cliente.innerHTML=db.clientes.map(c=>`<option>${c.nome}</option>`).join("");
-  clienteAgenda.innerHTML=cliente.innerHTML;
-
-  planoCliente.innerHTML=
-    `<option value="">Sem plano</option>`+
-    db.planos.map(p=>`<option>${p.nome}</option>`).join("");
-
-  tipoPlano.innerHTML=
-    db.produtos.filter(p=>p.tipo==="servico")
-      .map(p=>`<option>${p.nome}</option>`).join("");
-
-  produto.innerHTML=db.produtos.map(p=>
-    `<option value="${p.nome}|${p.valor}">${p.nome}</option>`
-  ).join("");
-
-  servicoAgenda.innerHTML=
-    db.produtos.filter(p=>p.tipo==="servico")
-      .map(p=>`<option>${p.nome}</option>`).join("");
-
-  horaAgenda.innerHTML=gerarHorarios15().map(h=>`<option>${h}</option>`).join("");
-
-  listaClientes.innerHTML=db.clientes.map(c=>
-    `<li>${c.nome} | Plano: ${c.plano||"-"} | Saldo: ${c.saldo||0}</li>`
-  ).join("");
-
-  listaPlanos.innerHTML=db.planos.map(p=>
-    `<li>${p.nome} - R$ ${p.valor} (${p.qtd}x ${p.tipo})</li>`
-  ).join("");
-
-  listaProdutos.innerHTML=db.produtos.map(p=>
-    `<li>${p.nome} (${p.tipo})</li>`
-  ).join("");
-
-  listaDespesas.innerHTML=db.despesas.map(d=>
-    `<li>${d.desc} - R$ ${d.valor}</li>`
-  ).join("");
-
-  listaAgenda.innerHTML=db.agenda
-    .filter(a=>a.data===dataAgenda.value)
-    .map(a=>`<li>${a.hora} | ${a.cliente} | ${a.servico}</li>`).join("");
-
-  renderCarrinho();
+function fecharCaixa(){
+  alert("Caixa fechado com sucesso");
+  db.caixa.aberto=false;
+  db.caixa.dinheiro=0;db.caixa.pix=0;db.caixa.cartao=0;
+  save(); render();
 }
 
 function renderCarrinho(){
@@ -301,6 +190,26 @@ function renderCarrinho(){
   });
   carrinho.innerHTML=h;
   total.innerText=s.toFixed(2);
+}
+
+function render(){
+  statusCaixa.innerText=db.caixa.aberto?"🟢 Caixa aberto":"🔴 Caixa fechado";
+  abrirBox.classList.toggle("hidden",db.caixa.aberto);
+
+  cliente.innerHTML=db.clientes.map(c=>`<option>${c.nome}</option>`).join("");
+  clienteAgenda.innerHTML=cliente.innerHTML;
+
+  planoCliente.innerHTML=`<option value="">Sem plano</option>`+
+    db.planos.map(p=>`<option>${p.nome}</option>`).join("");
+
+  produto.innerHTML=db.produtos.map(p=>
+    `<option value="${p.nome}|${p.valor}">${p.nome}</option>`
+  ).join("");
+
+  resumoCaixa.innerHTML=`
+  <p>💰 Dinheiro: R$ ${db.caixa.dinheiro.toFixed(2)}</p>
+  <p>📲 Pix: R$ ${db.caixa.pix.toFixed(2)}</p>
+  <p>💳 Cartão: R$ ${db.caixa.cartao.toFixed(2)}</p>`;
 }
 
 render();
